# NFE_Bot

./: .gitignore  LICENSE  README.md  nfe-bot.spec  pyproject.toml
.claude/: settings.local.json
app/: interface.py
app/controller/: comparar_nfc.py  comparar_nfe.py  consultar_nfe.py  utils.py
app/model/: ler_csv.py  salvar_excel.py
app/view/: interface.qml
