[project]
name = "nfe-bot"
version = "0.1.0"
description = "Bot de Notas Fiscais - automação para download e comparação de NF-e"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "pyside6>=6.8.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "xmltodict>=1.0.2",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
]
